--- a/index.css
+++ b/index.css
@@ -1,16 +1,24 @@
 body{
-    background-color: lightskyblue;
+    background-color:#735D78;
     display: flex;
     flex-direction:column;
     align-items: center;
     max-width: 500px;
     margin: 10px auto;
+    font-family: cursive
+    
 }
 
 button{
     padding: 20px 30px;
-    border-radius: 5px;
+    border-radius: 8px;
     border: none;
-    background-color: bisque;
-    
+    background-color: #e7b9c3;
+    font-family: cursive;
+    font-size: 1.5em;
+    cursor: pointer;
+    margin-top: 20px;
+}
+button:hover{
+    background-color: #dfa8b5;
 }
