Change the font of generated ideas

--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@ button:hover{
 
 .ideaText{
     color: aliceblue;
-    text-shadow: 5px 5px 5px #735D78;
-    font-family: "Chewy", system-ui;
+    text-shadow: 5px 5px 2px #735D78;
+    font-family: "Paprika", system-ui;
     font-weight: 200;
     font-style: normal;
   
