--- a/index.css
+++ b/index.css
@@ -1,11 +1,27 @@
 body{
+    /* https://uigradients.com */
+
+background: #735D78;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #FFAF7B, #D76D77, #735D78);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #FFAF7B, #D76D77, #735D78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+background-repeat: no-repeat;
+background-size: cover;
+min-height: 100vh;
+
+}
+
+main{
     background-color:#735D78;
     display: flex;
     flex-direction:column;
     align-items: center;
     max-width: 500px;
     margin: 30px auto;
-    font-family: cursive;  
+    font-family: cursive; 
+    padding:30px; 
+    border-radius: 8px;
 
 }
 
