--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ button:hover{
 .ideaText{
     color: aliceblue;
     text-shadow: 5px 5px 2px #735D78;
+    text-align: center;
     font-family: "Paprika", system-ui;
     font-weight: 200;
     font-style: normal;
